--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,20 @@
-*{
+* {
     font-family: Verdana, Arial, sans-serif;
     line-height: 1.5;
 }
 
-body{
+body {
     background-color: #f28095;
     margin: 0;
 }
 
-header, footer{
+header,
+footer {
     width: 1000px;
     margin: 0 auto;
 }
 
-header{
+header {
     height: 150px;
     background-color: #141a1a;
     background-image: url(/images/bowl.jpg);
@@ -22,13 +23,13 @@ header{
     color: white;
 }
 
-h1{
+h1 {
     margin: 0;
     padding-top: 50px;
     padding-left: 32px;
 }
 
-#grid-container{
+#grid-container {
     width: 1000px;
     margin: 0 auto;
     background-color: #fdfdfd;
@@ -37,7 +38,7 @@ h1{
     gap: 0px 16px;
 }
 
-nav{
+nav {
     width: 150px;
     margin-top: 16px;
 }
@@ -47,7 +48,7 @@ nav li {
     text-align: center;
 }
 
-nav a{
+nav a {
     display: block;
     padding: 16px;
     margin: 8px auto;
@@ -57,38 +58,40 @@ nav a{
     font-weight: bold;
 }
 
-a[href="index.html"], nav a:hover{
+a[href="index.html"],
+nav a:hover {
     background-color: #f28095;
 }
 
-main{
+main {
     color: #542c1b;
     padding-bottom: 16px;
 }
 
-main img{
+main img {
     float: left;
 }
 
-main ul, main p{
+main ul,
+main p {
     display: inline-block;
     width: 50%;
 }
 
-main p{
+main p {
     margin-left: 32px;
 }
 
-main ul{
+main ul {
     margin-left: 16px;
 }
 
-address{
+address {
     clear: both;
     padding-top: 16px;
-} 
+}
 
-footer{
+footer {
     font-style: italic;
     text-align: center;
     background-color: #afaeb4;
