--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ footer {
 header {
     height: 150px;
     background-color: #141a1a;
-    background-image: url(/images/bowl.jpg);
+    background-image: url(images/bowl.jpg);
     background-repeat: no-repeat;
     background-position: right;
     color: white;
